src/entdlr/parser/grammar/generated/javadoc/JavadocParser.cpp

// Generated from JavadocParser.g4 by ANTLR 4.9.1


#include "JavadocParserListener.h"
#include "JavadocParserVisitor.h"

#include "JavadocParser.h"


using namespace antlrcpp;
using namespace antlr4;

JavadocParser::JavadocParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

JavadocParser::~JavadocParser() {
  delete _interpreter;
}

std::string JavadocParser::getGrammarFileName() const {
  return "JavadocParser.g4";
}

const std::vector<std::string>& JavadocParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& JavadocParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- DocumentationContext ------------------------------------------------------------------

JavadocParser::DocumentationContext::DocumentationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JavadocParser::DocumentationContext::EOF() {
  return getToken(JavadocParser::EOF, 0);
}

tree::TerminalNode* JavadocParser::DocumentationContext::JAVADOC_START() {
  return getToken(JavadocParser::JAVADOC_START, 0);
}

JavadocParser::DocumentationContentContext* JavadocParser::DocumentationContext::documentationContent() {
  return getRuleContext<JavadocParser::DocumentationContentContext>(0);
}

tree::TerminalNode* JavadocParser::DocumentationContext::JAVADOC_END() {
  return getToken(JavadocParser::JAVADOC_END, 0);
}

std::vector<JavadocParser::SkipWhitespaceContext *> JavadocParser::DocumentationContext::skipWhitespace() {
  return getRuleContexts<JavadocParser::SkipWhitespaceContext>();
}

JavadocParser::SkipWhitespaceContext* JavadocParser::DocumentationContext::skipWhitespace(size_t i) {
  return getRuleContext<JavadocParser::SkipWhitespaceContext>(i);
}


size_t JavadocParser::DocumentationContext::getRuleIndex() const {
  return JavadocParser::RuleDocumentation;
}

void JavadocParser::DocumentationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavadocParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDocumentation(this);
}

void JavadocParser::DocumentationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavadocParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDocumentation(this);
}


antlrcpp::Any JavadocParser::DocumentationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavadocParserVisitor*>(visitor))
    return parserVisitor->visitDocumentation(this);
  else
    return visitor->visitChildren(this);
}

JavadocParser::DocumentationContext* JavadocParser::documentation() {
  DocumentationContext *_localctx = _tracker.createInstance<DocumentationContext>(_ctx, getState());
  enterRule(_localctx, 0, JavadocParser::RuleDocumentation);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    setState(65);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case JavadocParser::EOF: {
        enterOuterAlt(_localctx, 1);
        setState(44);
        match(JavadocParser::EOF);
        break;
      }

      case JavadocParser::JAVADOC_START: {
        enterOuterAlt(_localctx, 2);
        setState(45);
        match(JavadocParser::JAVADOC_START);
        setState(49);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(46);
            skipWhitespace(); 
          }
          setState(51);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
        }
        setState(52);
        documentationContent();
        setState(53);
        match(JavadocParser::JAVADOC_END);
        setState(54);
        match(JavadocParser::EOF);
        break;
      }

      case JavadocParser::NAME:
      case JavadocParser::NEWLINE:
      case JavadocParser::SPACE:
      case JavadocParser::TEXT_CONTENT:
      case JavadocParser::AT:
      case JavadocParser::STAR:
      case JavadocParser::SLASH:
      case JavadocParser::INLINE_TAG_START:
      case JavadocParser::BRACE_OPEN:
      case JavadocParser::BRACE_CLOSE: {
        enterOuterAlt(_localctx, 3);
        setState(59);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(56);
            skipWhitespace(); 
          }
          setState(61);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
        }
        setState(62);
        documentationContent();
        setState(63);
        match(JavadocParser::EOF);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DocumentationContentContext ------------------------------------------------------------------

JavadocParser::DocumentationContentContext::DocumentationContentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JavadocParser::DescriptionContext* JavadocParser::DocumentationContentContext::description() {
  return getRuleContext<JavadocParser::DescriptionContext>(0);
}

std::vector<JavadocParser::SkipWhitespaceContext *> JavadocParser::DocumentationContentContext::skipWhitespace() {
  return getRuleContexts<JavadocParser::SkipWhitespaceContext>();
}

JavadocParser::SkipWhitespaceContext* JavadocParser::DocumentationContentContext::skipWhitespace(size_t i) {
  return getRuleContext<JavadocParser::SkipWhitespaceContext>(i);
}

JavadocParser::TagSectionContext* JavadocParser::DocumentationContentContext::tagSection() {
  return getRuleContext<JavadocParser::TagSectionContext>(0);
}

std::vector<tree::TerminalNode *> JavadocParser::DocumentationContentContext::NEWLINE() {
  return getTokens(JavadocParser::NEWLINE);
}

tree::TerminalNode* JavadocParser::DocumentationContentContext::NEWLINE(size_t i) {
  return getToken(JavadocParser::NEWLINE, i);
}


size_t JavadocParser::DocumentationContentContext::getRuleIndex() const {
  return JavadocParser::RuleDocumentationContent;
}

void JavadocParser::DocumentationContentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavadocParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDocumentationContent(this);
}

void JavadocParser::DocumentationContentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavadocParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDocumentationContent(this);
}


antlrcpp::Any JavadocParser::DocumentationContentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavadocParserVisitor*>(visitor))
    return parserVisitor->visitDocumentationContent(this);
  else
    return visitor->visitChildren(this);
}

JavadocParser::DocumentationContentContext* JavadocParser::documentationContent() {
  DocumentationContentContext *_localctx = _tracker.createInstance<DocumentationContentContext>(_ctx, getState());
  enterRule(_localctx, 2, JavadocParser::RuleDocumentationContent);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    setState(95);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(67);
      description();
      setState(71);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == JavadocParser::NEWLINE

      || _la == JavadocParser::SPACE) {
        setState(68);
        skipWhitespace();
        setState(73);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(77);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(74);
          skipWhitespace(); 
        }
        setState(79);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
      }
      setState(80);
      tagSection();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(81);
      description();
      setState(83); 
      _errHandler->sync(this);
      alt = 1;
      do {
        switch (alt) {
          case 1: {
                setState(82);
                match(JavadocParser::NEWLINE);
                break;
              }

        default:
          throw NoViableAltException(this);
        }
        setState(85); 
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
      } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
      setState(90);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(87);
          skipWhitespace(); 
        }
        setState(92);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
      }
      setState(93);
      tagSection();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SkipWhitespaceContext ------------------------------------------------------------------

JavadocParser::SkipWhitespaceContext::SkipWhitespaceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JavadocParser::SkipWhitespaceContext::SPACE() {
  return getToken(JavadocParser::SPACE, 0);
}

tree::TerminalNode* JavadocParser::SkipWhitespaceContext::NEWLINE() {
  return getToken(JavadocParser::NEWLINE, 0);
}


size_t JavadocParser::SkipWhitespaceContext::getRuleIndex() const {
  return JavadocParser::RuleSkipWhitespace;
}

void JavadocParser::SkipWhitespaceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavadocParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSkipWhitespace(this);
}

void JavadocParser::SkipWhitespaceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavadocParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSkipWhitespace(this);
}


antlrcpp::Any JavadocParser::SkipWhitespaceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavadocParserVisitor*>(visitor))
    return parserVisitor->visitSkipWhitespace(this);
  else
    return visitor->visitChildren(this);
}

JavadocParser::SkipWhitespaceContext* JavadocParser::skipWhitespace() {
  SkipWhitespaceContext *_localctx = _tracker.createInstance<SkipWhitespaceContext>(_ctx, getState());
  enterRule(_localctx, 4, JavadocParser::RuleSkipWhitespace);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(97);
    _la = _input->LA(1);
    if (!(_la == JavadocParser::NEWLINE

    || _la == JavadocParser::SPACE)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DescriptionContext ------------------------------------------------------------------

JavadocParser::DescriptionContext::DescriptionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<JavadocParser::DescriptionLineContext *> JavadocParser::DescriptionContext::descriptionLine() {
  return getRuleContexts<JavadocParser::DescriptionLineContext>();
}

JavadocParser::DescriptionLineContext* JavadocParser::DescriptionContext::descriptionLine(size_t i) {
  return getRuleContext<JavadocParser::DescriptionLineContext>(i);
}

std::vector<JavadocParser::DescriptionNewlineContext *> JavadocParser::DescriptionContext::descriptionNewline() {
  return getRuleContexts<JavadocParser::DescriptionNewlineContext>();
}

JavadocParser::DescriptionNewlineContext* JavadocParser::DescriptionContext::descriptionNewline(size_t i) {
  return getRuleContext<JavadocParser::DescriptionNewlineContext>(i);
}


size_t JavadocParser::DescriptionContext::getRuleIndex() const {
  return JavadocParser::RuleDescription;
}

void JavadocParser::DescriptionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavadocParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDescription(this);
}

void JavadocParser::DescriptionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavadocParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDescription(this);
}


antlrcpp::Any JavadocParser::DescriptionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavadocParserVisitor*>(visitor))
    return parserVisitor->visitDescription(this);
  else
    return visitor->visitChildren(this);
}

JavadocParser::DescriptionContext* JavadocParser::description() {
  DescriptionContext *_localctx = _tracker.createInstance<DescriptionContext>(_ctx, getState());
  enterRule(_localctx, 6, JavadocParser::RuleDescription);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(99);
    descriptionLine();
    setState(109);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(101); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(100);
          descriptionNewline();
          setState(103); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == JavadocParser::NEWLINE);
        setState(105);
        descriptionLine(); 
      }
      setState(111);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DescriptionLineContext ------------------------------------------------------------------

JavadocParser::DescriptionLineContext::DescriptionLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JavadocParser::DescriptionLineStartContext* JavadocParser::DescriptionLineContext::descriptionLineStart() {
  return getRuleContext<JavadocParser::DescriptionLineStartContext>(0);
}

std::vector<JavadocParser::DescriptionLineElementContext *> JavadocParser::DescriptionLineContext::descriptionLineElement() {
  return getRuleContexts<JavadocParser::DescriptionLineElementContext>();
}

JavadocParser::DescriptionLineElementContext* JavadocParser::DescriptionLineContext::descriptionLineElement(size_t i) {
  return getRuleContext<JavadocParser::DescriptionLineElementContext>(i);
}

JavadocParser::InlineTagContext* JavadocParser::DescriptionLineContext::inlineTag() {
  return getRuleContext<JavadocParser::InlineTagContext>(0);
}


size_t JavadocParser::DescriptionLineContext::getRuleIndex() const {
  return JavadocParser::RuleDescriptionLine;
}

void JavadocParser::DescriptionLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavadocParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDescriptionLine(this);
}

void JavadocParser::DescriptionLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavadocParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDescriptionLine(this);
}


antlrcpp::Any JavadocParser::DescriptionLineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavadocParserVisitor*>(visitor))
    return parserVisitor->visitDescriptionLine(this);
  else
    return visitor->visitChildren(this);
}

JavadocParser::DescriptionLineContext* JavadocParser::descriptionLine() {
  DescriptionLineContext *_localctx = _tracker.createInstance<DescriptionLineContext>(_ctx, getState());
  enterRule(_localctx, 8, JavadocParser::RuleDescriptionLine);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    setState(126);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case JavadocParser::NAME:
      case JavadocParser::SPACE:
      case JavadocParser::TEXT_CONTENT:
      case JavadocParser::STAR:
      case JavadocParser::SLASH:
      case JavadocParser::BRACE_OPEN:
      case JavadocParser::BRACE_CLOSE: {
        enterOuterAlt(_localctx, 1);
        setState(112);
        descriptionLineStart();
        setState(116);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(113);
            descriptionLineElement(); 
          }
          setState(118);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx);
        }
        break;
      }

      case JavadocParser::INLINE_TAG_START: {
        enterOuterAlt(_localctx, 2);
        setState(119);
        inlineTag();
        setState(123);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(120);
            descriptionLineElement(); 
          }
          setState(125);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DescriptionLineStartContext ------------------------------------------------------------------

JavadocParser::DescriptionLineStartContext::DescriptionLineStartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> JavadocParser::DescriptionLineStartContext::SPACE() {
  return getTokens(JavadocParser::SPACE);
}

tree::TerminalNode* JavadocParser::DescriptionLineStartContext::SPACE(size_t i) {
  return getToken(JavadocParser::SPACE, i);
}

std::vector<JavadocParser::DescriptionLineNoSpaceNoAtContext *> JavadocParser::DescriptionLineStartContext::descriptionLineNoSpaceNoAt() {
  return getRuleContexts<JavadocParser::DescriptionLineNoSpaceNoAtContext>();
}

JavadocParser::DescriptionLineNoSpaceNoAtContext* JavadocParser::DescriptionLineStartContext::descriptionLineNoSpaceNoAt(size_t i) {
  return getRuleContext<JavadocParser::DescriptionLineNoSpaceNoAtContext>(i);
}

std::vector<tree::TerminalNode *> JavadocParser::DescriptionLineStartContext::AT() {
  return getTokens(JavadocParser::AT);
}

tree::TerminalNode* JavadocParser::DescriptionLineStartContext::AT(size_t i) {
  return getToken(JavadocParser::AT, i);
}


size_t JavadocParser::DescriptionLineStartContext::getRuleIndex() const {
  return JavadocParser::RuleDescriptionLineStart;
}

void JavadocParser::DescriptionLineStartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavadocParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDescriptionLineStart(this);
}

void JavadocParser::DescriptionLineStartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavadocParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDescriptionLineStart(this);
}


antlrcpp::Any JavadocParser::DescriptionLineStartContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavadocParserVisitor*>(visitor))
    return parserVisitor->visitDescriptionLineStart(this);
  else
    return visitor->visitChildren(this);
}

JavadocParser::DescriptionLineStartContext* JavadocParser::descriptionLineStart() {
  DescriptionLineStartContext *_localctx = _tracker.createInstance<DescriptionLineStartContext>(_ctx, getState());
  enterRule(_localctx, 10, JavadocParser::RuleDescriptionLineStart);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(129);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JavadocParser::SPACE) {
      setState(128);
      match(JavadocParser::SPACE);
    }
    setState(132); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(131);
              descriptionLineNoSpaceNoAt();
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(134); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
    setState(141);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 16, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(139);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case JavadocParser::NAME:
          case JavadocParser::TEXT_CONTENT:
          case JavadocParser::STAR:
          case JavadocParser::SLASH:
          case JavadocParser::BRACE_OPEN:
          case JavadocParser::BRACE_CLOSE: {
            setState(136);
            descriptionLineNoSpaceNoAt();
            break;
          }

          case JavadocParser::SPACE: {
            setState(137);
            match(JavadocParser::SPACE);
            break;
          }

          case JavadocParser::AT: {
            setState(138);
            match(JavadocParser::AT);
            break;
          }

        default:
          throw NoViableAltException(this);
        } 
      }
      setState(143);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 16, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DescriptionLineNoSpaceNoAtContext ------------------------------------------------------------------

JavadocParser::DescriptionLineNoSpaceNoAtContext::DescriptionLineNoSpaceNoAtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JavadocParser::DescriptionLineNoSpaceNoAtContext::TEXT_CONTENT() {
  return getToken(JavadocParser::TEXT_CONTENT, 0);
}

tree::TerminalNode* JavadocParser::DescriptionLineNoSpaceNoAtContext::NAME() {
  return getToken(JavadocParser::NAME, 0);
}

tree::TerminalNode* JavadocParser::DescriptionLineNoSpaceNoAtContext::STAR() {
  return getToken(JavadocParser::STAR, 0);
}

tree::TerminalNode* JavadocParser::DescriptionLineNoSpaceNoAtContext::SLASH() {
  return getToken(JavadocParser::SLASH, 0);
}

tree::TerminalNode* JavadocParser::DescriptionLineNoSpaceNoAtContext::BRACE_OPEN() {
  return getToken(JavadocParser::BRACE_OPEN, 0);
}

tree::TerminalNode* JavadocParser::DescriptionLineNoSpaceNoAtContext::BRACE_CLOSE() {
  return getToken(JavadocParser::BRACE_CLOSE, 0);
}


size_t JavadocParser::DescriptionLineNoSpaceNoAtContext::getRuleIndex() const {
  return JavadocParser::RuleDescriptionLineNoSpaceNoAt;
}

void JavadocParser::DescriptionLineNoSpaceNoAtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavadocParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDescriptionLineNoSpaceNoAt(this);
}

void JavadocParser::DescriptionLineNoSpaceNoAtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavadocParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDescriptionLineNoSpaceNoAt(this);
}


antlrcpp::Any JavadocParser::DescriptionLineNoSpaceNoAtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavadocParserVisitor*>(visitor))
    return parserVisitor->visitDescriptionLineNoSpaceNoAt(this);
  else
    return visitor->visitChildren(this);
}

JavadocParser::DescriptionLineNoSpaceNoAtContext* JavadocParser::descriptionLineNoSpaceNoAt() {
  DescriptionLineNoSpaceNoAtContext *_localctx = _tracker.createInstance<DescriptionLineNoSpaceNoAtContext>(_ctx, getState());
  enterRule(_localctx, 12, JavadocParser::RuleDescriptionLineNoSpaceNoAt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(144);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << JavadocParser::NAME)
      | (1ULL << JavadocParser::TEXT_CONTENT)
      | (1ULL << JavadocParser::STAR)
      | (1ULL << JavadocParser::SLASH)
      | (1ULL << JavadocParser::BRACE_OPEN)
      | (1ULL << JavadocParser::BRACE_CLOSE))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DescriptionLineElementContext ------------------------------------------------------------------

JavadocParser::DescriptionLineElementContext::DescriptionLineElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JavadocParser::InlineTagContext* JavadocParser::DescriptionLineElementContext::inlineTag() {
  return getRuleContext<JavadocParser::InlineTagContext>(0);
}

JavadocParser::DescriptionLineTextContext* JavadocParser::DescriptionLineElementContext::descriptionLineText() {
  return getRuleContext<JavadocParser::DescriptionLineTextContext>(0);
}


size_t JavadocParser::DescriptionLineElementContext::getRuleIndex() const {
  return JavadocParser::RuleDescriptionLineElement;
}

void JavadocParser::DescriptionLineElementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavadocParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDescriptionLineElement(this);
}

void JavadocParser::DescriptionLineElementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavadocParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDescriptionLineElement(this);
}


antlrcpp::Any JavadocParser::DescriptionLineElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JavadocParserVisitor*>(visitor))
    return parserVisitor->visitDescriptionLineElement(this);
  else
    return visitor->visitChildren(this);
}

JavadocParser::DescriptionLineElementContext* JavadocParser::descriptionLineElement() {
  DescriptionLineElementContext *_localctx = _tracker.createInstance<DescriptionLineElementContext>(_ctx, getState());
  enterRule(_localctx, 14, JavadocParser::RuleDescriptionLineElement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(148);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case JavadocParser::INLINE_TAG_START: {
        enterOuterAlt(_localctx, 1);
        setState(146);
        inlineTag();
        break;
      }

      case JavadocParser::NAME:
      case JavadocParser::SPACE:
      case JavadocParser::TEXT_CONTENT:
      case JavadocParser::AT:
      case JavadocParser::STAR:
      case JavadocParser::SLASH:
      case JavadocParser::BRACE_OPEN:
      case JavadocParser::BRACE_CLOSE: {
        enterOuterAlt(_localctx, 2);
        setState(147);
        descriptionLineText();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DescriptionLineTextContext ------------------------------------------------------------------
